Fix dark mode font color for version switcher (2.x versions)

--- a/2.3/_static/numpy.css
+++ b/2.3/_static/numpy.css
@@ -28,7 +28,6 @@ body {
 
 button.btn.version-switcher__button,
 button.btn.version-switcher__button:hover {
-  color: black;
   font-size: small;
 }
 
